// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`split-cell split 1x3 cell at 3x4 table 1`] = `
Object {
  "document": Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "leaves": Array [
              Object {
                "marks": Array [],
                "object": "leaf",
                "text": "Lorem ipsum...",
              },
            ],
            "object": "text",
          },
        ],
        "object": "block",
        "type": "paragraph",
      },
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "data": Object {
                  "width": "200",
                },
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "leaves": Array [
                          Object {
                            "marks": Array [],
                            "object": "leaf",
                            "text": "0",
                          },
                        ],
                        "object": "text",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
              Object {
                "data": Object {
                  "width": "200",
                },
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "leaves": Array [
                          Object {
                            "marks": Array [],
                            "object": "leaf",
                            "text": "1",
                          },
                        ],
                        "object": "text",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
              Object {
                "data": Object {
                  "width": "200",
                },
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "leaves": Array [
                          Object {
                            "marks": Array [],
                            "object": "leaf",
                            "text": "2",
                          },
                        ],
                        "object": "text",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
              Object {
                "data": Object {
                  "colspan": 1,
                  "rowspan": 1,
                  "width": "200",
                },
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "leaves": Array [
                          Object {
                            "marks": Array [],
                            "object": "leaf",
                            "text": "3",
                          },
                        ],
                        "object": "text",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
            ],
            "object": "block",
            "type": "table_row",
          },
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "data": Object {},
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "leaves": Array [
                          Object {
                            "marks": Array [],
                            "object": "leaf",
                            "text": "4",
                          },
                        ],
                        "object": "text",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
              Object {
                "data": Object {},
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "leaves": Array [
                          Object {
                            "marks": Array [],
                            "object": "leaf",
                            "text": "5",
                          },
                        ],
                        "object": "text",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
              Object {
                "data": Object {},
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "leaves": Array [
                          Object {
                            "marks": Array [],
                            "object": "leaf",
                            "text": "6",
                          },
                        ],
                        "object": "text",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
              Object {
                "data": Object {
                  "width": 15,
                },
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "leaves": Array [
                          Object {
                            "marks": Array [],
                            "object": "leaf",
                            "text": "",
                          },
                        ],
                        "object": "text",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
            ],
            "object": "block",
            "type": "table_row",
          },
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "data": Object {},
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "leaves": Array [
                          Object {
                            "marks": Array [],
                            "object": "leaf",
                            "text": "7",
                          },
                        ],
                        "object": "text",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
              Object {
                "data": Object {},
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "leaves": Array [
                          Object {
                            "marks": Array [],
                            "object": "leaf",
                            "text": "8",
                          },
                        ],
                        "object": "text",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
              Object {
                "data": Object {},
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "leaves": Array [
                          Object {
                            "marks": Array [],
                            "object": "leaf",
                            "text": "9",
                          },
                        ],
                        "object": "text",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
              Object {
                "data": Object {
                  "width": 15,
                },
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "leaves": Array [
                          Object {
                            "marks": Array [],
                            "object": "leaf",
                            "text": "",
                          },
                        ],
                        "object": "text",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
            ],
            "object": "block",
            "type": "table_row",
          },
        ],
        "object": "block",
        "type": "table",
      },
    ],
    "object": "document",
  },
  "object": "value",
}
`;

exports[`split-cell split 1x3 cell at 3x4 table 2`] = `"<p style=\\"margin:0\\">Lorem ipsum...</p><table><tbody><tr><td style=\\"width:200px\\"></td><td style=\\"width:200px\\"></td><td style=\\"width:200px\\"></td><td colSpan=\\"1\\" rowspan=\\"1\\" style=\\"width:200px\\"></td></tr><tr><td style=\\"width:auto\\"></td><td style=\\"width:auto\\"></td><td style=\\"width:auto\\"></td><td style=\\"width:15px\\"></td></tr><tr><td style=\\"width:auto\\"></td><td style=\\"width:auto\\"></td><td style=\\"width:auto\\"></td><td style=\\"width:15px\\"></td></tr></tbody></table>"`;

exports[`split-cell split 2X2 cell at 3x3 table 1`] = `
Object {
  "document": Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "leaves": Array [
              Object {
                "marks": Array [],
                "object": "leaf",
                "text": "Lorem ipsum ...",
              },
            ],
            "object": "text",
          },
        ],
        "object": "block",
        "type": "paragraph",
      },
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "data": Object {
                  "colspan": 1,
                  "rowspan": 1,
                  "width": "200",
                },
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "leaves": Array [
                          Object {
                            "marks": Array [],
                            "object": "leaf",
                            "text": "0",
                          },
                        ],
                        "object": "text",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
              Object {
                "data": Object {
                  "width": 15,
                },
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "leaves": Array [
                          Object {
                            "marks": Array [],
                            "object": "leaf",
                            "text": "",
                          },
                        ],
                        "object": "text",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
              Object {
                "data": Object {
                  "width": "200",
                },
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "leaves": Array [
                          Object {
                            "marks": Array [],
                            "object": "leaf",
                            "text": "1",
                          },
                        ],
                        "object": "text",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
            ],
            "object": "block",
            "type": "table_row",
          },
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "data": Object {
                  "width": 15,
                },
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "leaves": Array [
                          Object {
                            "marks": Array [],
                            "object": "leaf",
                            "text": "",
                          },
                        ],
                        "object": "text",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
              Object {
                "data": Object {
                  "width": 15,
                },
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "leaves": Array [
                          Object {
                            "marks": Array [],
                            "object": "leaf",
                            "text": "",
                          },
                        ],
                        "object": "text",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
              Object {
                "data": Object {
                  "width": "200",
                },
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "leaves": Array [
                          Object {
                            "marks": Array [],
                            "object": "leaf",
                            "text": "2",
                          },
                        ],
                        "object": "text",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
            ],
            "object": "block",
            "type": "table_row",
          },
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "data": Object {
                  "width": "200",
                },
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "leaves": Array [
                          Object {
                            "marks": Array [],
                            "object": "leaf",
                            "text": "6",
                          },
                        ],
                        "object": "text",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
              Object {
                "data": Object {
                  "width": "200",
                },
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "leaves": Array [
                          Object {
                            "marks": Array [],
                            "object": "leaf",
                            "text": "7",
                          },
                        ],
                        "object": "text",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
              Object {
                "data": Object {
                  "width": "200",
                },
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "leaves": Array [
                          Object {
                            "marks": Array [],
                            "object": "leaf",
                            "text": "8",
                          },
                        ],
                        "object": "text",
                      },
                    ],
                    "object": "block",
                    "type": "table_content",
                  },
                ],
                "object": "block",
                "type": "table_cell",
              },
            ],
            "object": "block",
            "type": "table_row",
          },
        ],
        "object": "block",
        "type": "table",
      },
    ],
    "object": "document",
  },
  "object": "value",
}
`;

exports[`split-cell split 2X2 cell at 3x3 table 2`] = `"<p style=\\"margin:0\\">Lorem ipsum ...</p><table><tbody><tr><td colSpan=\\"1\\" rowspan=\\"1\\" style=\\"width:200px\\"></td><td style=\\"width:15px\\"></td><td style=\\"width:200px\\"></td></tr><tr><td style=\\"width:15px\\"></td><td style=\\"width:15px\\"></td><td style=\\"width:200px\\"></td></tr><tr><td style=\\"width:200px\\"></td><td style=\\"width:200px\\"></td><td style=\\"width:200px\\"></td></tr></tbody></table>"`;
